# fastgpx

./: .clang-format  .gitignore  .readthedocs.yaml  CMakeLists.txt  CMakeSettings.json  Development.md  GPX.md  LICENSE.md  README.md  benchmark.py  catch2.py  compare.py  coverage.bat  datetime.md  debug.py  example.py  example2.py  example4.py  fastgpx.pyi  frame.html  glmap.py  gpxcpp.pyi  map.html  map.py  merge.py  pyproject.toml  pytest.ini  requirements.txt  server.py
.github/workflows/: docs.yml  pypi-test.yml  pypi.yml  tests.yml  wheels.yml
benchmarks/: benchmark_gpx.py  benchmark_polyline.py  gpx_parse.md  nanobind_vs_pybind11.md
cpp/: CMakeLists.txt  app.cpp  expected_gpx_data.json  fastgpx.cpp  fastgpx.hpp  fastgpx_test.cpp  filesystem.cpp  filesystem.hpp  geom.cpp  geom.hpp  geom_test.cpp  gpx.cpp  gpx.hpp  gpxcpp.cpp  main.cpp  polyline.cpp  polyline.hpp  pybind_chrono_utc.hpp  python_fastgpx.cpp  python_utc_chrono.hpp  test_data.cpp  test_data.hpp
cpp/fastgpx/: datetime.cpp  datetime.hpp  datetime_test.cpp  errors.cpp  errors.hpp  errors_test.cpp  fastgpx.cpp  fastgpx.hpp  fastgpx_test.cpp  filesystem.cpp  geom.cpp  geom_test.cpp  polyline.cpp  test_data.cpp  test_data.hpp  test_data.json  test_data_test.cpp
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  overview.rst
examples/: example.py
fastgpx/: __init__.pyi  polyline.pyi
gpx/2024 Great Roadtrip/: Connected_20240731_113605_Näsåker_Sollefteå.gpx  Connected_20240804_113139_Östra_Skolgatan_93331_Arvidsjaur.gpx  Connected_20240805_100631_Vänortstorget_98131_Kiruna.gpx  Connected_20240806_102330_Holmboevegen_8_9010_Tromsø.gpx  Connected_20240807_090148_Salvegen_9118_Brensholmen.gpx  Connected_20240808_105105_Harstadgårdsveien_7_9405_Harstad.gpx  Connected_20240809_112648_Birger_Eriksens_Vei_8392_Sørvågen.gpx  Connected_20240811_135858_Furøyveien_8178_Halsa.gpx  Connected_20240812_112800_.gpx  Connected_20240813_112855_Brønnøy.gpx  Connected_20240814_103410_Harald_Bothners_Veg_36_7052_Trondheim.gpx  Connected_20240816_104218_Tistamvegen_5_6797_Utvik.gpx  Connected_20240816_201722_.gpx  Connected_20240817_110959_Kraftverksvegen_31_4127_Lysebotn.gpx  Connected_20240817_175455_.gpx  Connected_20240818_113411_Kraftverksvegen_31_4127_Lysebotn.gpx  Connected_20240819_110406_Kraftverksvegen_31_4127_Lysebotn.gpx  Connected_20240820_121406_Kyrkjevegen_188_4137_Årdal_i_Ryfylke.gpx  Connected_20240821_121412_Songesand_Lysebotn_Songesand.gpx  Connected_20240822_105633_Fodnesvegen_6887_Lærdal.gpx  Connected_20240823_102100_Otto_Nielsens_Veg_2_7052_Trondheim.gpx  Connected_20240824_100438_Otto_Nielsens_Veg_2_7052_Trondheim.gpx  Connected_20240824_174027_Lundamo_Trondheim.gpx  Connected_20240824_patched.gpx
gpx/2024 Sommertur/: Connected_20240623_112155_.gpx  Connected_20240624_102106_Volda.gpx  Connected_20240624_233423_Stranda_Eikesdalsvegen_Aursjøvegen_Sunndalsøra.gpx  Connected_20240625_102547_Litldalsvegen_6600_Sunndalsøra.gpx  Connected_20240625_150703_Svartvassvegen_1_6650_Surnadal.gpx  Connected_20240625_181119_Svartvassvegen_1_6650_Surnadal.gpx  Connected_20240626_105521_Harald_Bothners_Veg_36_7052_Trondheim.gpx
gpx/2024 Sommertur/days/: Connected_20240622_102935_Kvikneveien_4694_2512_Kvikne.gpx  Connected_20240625_merged.gpx
gpx/2024 TopCamp/: Connected_20240518_094959_.gpx  Connected_20240519_092555_Gamla_torget_1_68530_Torsby_Sweden.gpx  Connected_20240520_103549_Lagerbergsgatan_35_45131_Uddevalla_Sweden.gpx  Connected_20240521_095426_Östra_Mårtensgatan_3_22361_Lund_Sweden.gpx  Connected_20240525_091930_Sejerøvej_4583_Sjællands_Odde_Denmark.gpx  Connected_20240526_000731_Norway.gpx  Connected_20240527_102505_Gol.gpx  Connected_20240528_091449_Dombås_Dovre.gpx  Connected_20240529_091916_Harald_Bothners_Veg_36_7052_Trondheim.gpx
gpx/2025 Beeline Moto II/: 2025-10-14 Beeline Lunch ride.gpx  2025-10-14 Beeline Morning ride.gpx
gpx/test/: debug-segment.gpx  segment.gpx  two-points.gpx
profiling/: profile_polyline.py
src/cpp/: CMakeLists.txt  app.cpp  gpx.cpp  gpx.hpp  gpxcpp.cpp  main.cpp  python_fastgpx.cpp  python_utc_chrono.hpp  python_utc_chrono_nanobind.hpp
src/cpp/fastgpx/: datetime.cpp  datetime.hpp  datetime_test.cpp  errors.cpp  errors.hpp  fastgpx.cpp  fastgpx.hpp  fastgpx_test.cpp  filesystem.cpp  filesystem.hpp  filesystem_test.cpp  geom.cpp  geom.hpp  geom_test.cpp  polyline.cpp  polyline.hpp  test_data.cpp  test_data_test.cpp
src/fastgpx/: __init__.py  __init__.pyi  geo.pyi
src/fastgpx/fastgpx/: __init__.pyi  geo.pyi  polyline.pyi
templates/: index.html  index.html.j2  map.html  map.html.j2
tests/: test_bounds.py  test_fastgpx.py  test_geo.py  test_gpxcpp.py  test_latlong.py  test_polyline.py  test_time_bounds.py
