[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "fastgpx"
version = "0.0.1"
requires-python = ">=3.11"

dependencies = []

[project.optional-dependencies]
dev = [
  "gpxpy",
  "lxml",
  "polyline",
  "colorama",
  "pytest",
  "pybind11-stubgen",
  "snakeviz",
  "types-colorama",
  "lxml-stubs",
]

[tool.scikit-build]
# https://scikit-build-core.readthedocs.io/en/latest/configuration/index.html#customizing-the-built-wheel
wheel.packages = ["src/fastgpx"]
sdist.include = ["README.md", "CMakeLists.txt", "src"]

# https://scikit-build-core.readthedocs.io/en/latest/configuration/index.html#configuring-cmake-arguments-and-defines
# cmake.build-type = "Debug"
# cmake.build-type = "Release"
cmake.build-type = "RelWithDebInfo"

[tool.scikit-build.cmake.define]
# No need to build the tests in the wheel.
BUILD_TESTING = false
