[build-system]
requires = ["scikit-build-core", "nanobind"]
build-backend = "scikit_build_core.build"

[project]
name = "fastgpx"
version = "0.6.2"
requires-python = ">=3.12"

description = "An experimental Python library for parsing GPX files fast."
readme = "README.md"
keywords = ["gpx", "parser", "fast"]
authors = [{ name = "Thomas Thomassen" }]
license = "MIT"

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "Topic :: File Formats",

  # "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",

  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [ # Tests and build
  "gpxpy",
  "nanobind>=2.9.2",
  "polyline>=2.0.4",
  "pytest",
]
benchmarks = [ #
  "colorama",
  "types-colorama",
  "lxml",
  "lxml-stubs",
]
profiling = [ #
  "colorama",
  "types-colorama",
  "snakeviz",
]
docs = [ #
  "sphinx>=8.2.3",
  "sphinx-rtd-theme>=3.0.2",
  "sphinx-autodoc-typehints>=3.5.2",
]

[project.urls]
Homepage = "https://github.com/thomthom/fastgpx"
Repository = "https://github.com/thomthom/fastgpx.git"
Documentation = "https://thomthom.github.io/fastgpx/"

[tool.scikit-build]
# https://scikit-build-core.readthedocs.io/en/latest/configuration/index.html#customizing-the-built-wheel
wheel.packages = ["src/fastgpx"]

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
sdist.exclude = [".github", ".vscode", "gpx"]

# https://nanobind.readthedocs.io/en/latest/packaging.html

# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# https://scikit-build-core.readthedocs.io/en/latest/configuration/index.html#configuring-cmake-arguments-and-defines
# cmake.build-type = "Debug"
# cmake.build-type = "Release"
cmake.build-type = "RelWithDebInfo"

[tool.scikit-build.cmake.define]
# No need to build the tests in the wheel.
BUILD_TESTING = false
